# Estimators-for-Measures-of-Presortedness

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/Analysis/: Evaluator.h  MetricNormalizer.h  PresortednessMetrics.h
src/Analysis/R Scripts/: coverage_plot.R  distribution_plot.R  scatter_plot.R
src/Data/: ExperimentConfigurator.h
src/Data/Generation/: ArrayType.h  DataGenerator.h  RndArrGenerator.h  RunArrGenerator.h  RunGeneratorNoiseBased.h  RunGeneratorSegmentsBased.h
src/Data/Sampling/: ClusterSampler.h  CombinedSampler.h  Sampler.h  SamplerFactory.h  SamplingStrategy.h  StratBasedSampler.h  StratifiedSampler.h
tests/: DataGeneratorTest.h  PresortednessMeasures.h  SamplerTest.h  test_runner.cpp
